--- a/BitcoinExRC/CMakeLists.txt
+++ b/BitcoinExRC/CMakeLists.txt
@@ -1,2 +1,2 @@
 add_executable(BitcoinExRC src/bitcoin.cc src/curlHandler.cc src/main.cc)
-target_link_libraries(BitcoinExRC CURL::libcurl nlohmann_json::nlohmann_json)
+target_link_libraries(BitcoinExRC CURL::libcurl nlohmann_json::nlohmann_json fmt::fmt)
