--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,7 @@ cmake_minimum_required(VERSION 3.6...3.31)
 project(BitcoinExRC VERSION 0.1.0 LANGUAGES CXX C)
 include(cmake/config.cmake)
 #@add_find_package Warning: Do not remove this line
+find_package(fmt)
 find_package(nlohmann_json)
 find_package(CURL)
 
